Add new styles and content for About section to enhance clarity and user engagement

--- a/client_code/landing/form_template.yaml
+++ b/client_code/landing/form_template.yaml
@@ -205,6 +205,92 @@ container:
                   border: 2px solid #FFEB3B;
                   border-radius: 8px;
               }
+
+              /* New About Section Styles */
+              .about-container {
+                  max-width: 1200px;
+                  margin: 0 auto;
+                  padding: 2rem;
+              }
+
+              .about-grid {
+                  display: grid;
+                  grid-template-columns: repeat(2, 1fr);
+                  gap: 3rem;
+                  margin: 4rem 0;
+              }
+
+              .about-card {
+                  background: linear-gradient(145deg, #ffffff 0%, #f5f5f5 100%);
+                  padding: 2.5rem;
+                  border-radius: 15px;
+                  box-shadow: 0 10px 30px rgba(0,0,0,0.1);
+              }
+
+              .about-card h3 {
+                  color: #5D4037;
+                  font-size: 1.5rem;
+                  margin-bottom: 1.5rem;
+                  border-bottom: 2px solid #FFEB3B;
+                  padding-bottom: 0.5rem;
+                  display: inline-block;
+              }
+
+              .challenge-list {
+                  display: grid;
+                  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+                  gap: 1.5rem;
+                  margin: 2rem 0;
+              }
+
+              .challenge-item {
+                  background: white;
+                  padding: 1.5rem;
+                  border-radius: 10px;
+                  border-left: 4px solid #FFEB3B;
+                  box-shadow: 0 4px 15px rgba(0,0,0,0.05);
+                  transition: transform 0.3s ease;
+              }
+
+              .challenge-item:hover {
+                  transform: translateY(-5px);
+              }
+
+              .challenge-icon {
+                  font-size: 2rem;
+                  margin-bottom: 1rem;
+              }
+
+              .industry-grid {
+                  display: grid;
+                  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+                  gap: 1rem;
+                  margin: 2rem 0;
+              }
+
+              .industry-item {
+                  background: #5D4037;
+                  color: white;
+                  padding: 1.5rem;
+                  border-radius: 10px;
+                  text-align: center;
+                  transition: all 0.3s ease;
+              }
+
+              .industry-item:hover {
+                  background: #8D6E63;
+                  transform: scale(1.05);
+              }
+
+              .mission-statement {
+                  font-size: 1.2rem;
+                  line-height: 1.8;
+                  color: #333;
+                  margin: 2rem 0;
+                  padding: 2rem;
+                  background: rgba(255, 235, 59, 0.1);
+                  border-radius: 10px;
+              }
           </style>
       </head>
       <body>
@@ -283,73 +369,63 @@ container:
               <div class="hero">
                   <div class="hero-overlay"></div>
                   <div class="hero-text">
-                      <h2>Empowering Businesses with Smart Automation</h2>
-                      <p>Transform your business operations with intelligent workflow solutions</p>
+                      <h2>Empowering Business Growth Through Automation</h2>
+                      <p>Transforming manual processes into efficient, automated workflows</p>
                   </div>
               </div>
               
-              <div class="content-section">
-                  <h2>Our Mission</h2>
-                  <p>At Willow River Automation Services, we believe in the power of efficiency, precision, and innovation. Our mission is to help small and mid-sized businesses leverage workflow automation, business process optimization, and system integration to streamline operations, reduce manual labor, and drive profitability.</p>
-                  
-                  <div class="values-grid">
-                      <div class="value-item">
-                          <h3>Why We Do This</h3>
-                          <p>We're passionate about helping businesses evolve by eliminating roadblocks caused by outdated processes, disconnected software, and manual workflows. By integrating cutting-edge automation tools, AI-driven solutions, and custom business logic, we empower our clients to work smarter, not harder.</p>
+              <div class="about-container">
+                  <div class="mission-statement">
+                      <p>At Willow River Automation Services, we believe in the power of efficiency, precision, and innovation. Our mission is to help small and mid-sized businesses leverage automation to streamline operations and drive growth.</p>
+                  </div>
+
+                  <div class="about-grid">
+                      <div class="about-card">
+                          <h3>Why Choose Us</h3>
+                          <p>We're passionate about helping businesses evolve by eliminating roadblocks caused by outdated processes and manual workflows. Our approach combines cutting-edge automation tools with practical business solutions.</p>
+                      </div>
+                      <div class="about-card">
+                          <h3>Our Approach</h3>
+                          <p>Through data-driven analysis and collaborative planning, we ensure every automation solution delivers measurable results in time savings, error reduction, and improved efficiency.</p>
                       </div>
                   </div>
 
                   <h2>Common Challenges We Solve</h2>
-                  <div class="challenges-grid">
+                  <div class="challenge-list">
                       <div class="challenge-item">
-                          <h3>🚀 Reducing Manual Data Entry</h3>
-                          <p>Create automated data syncs and API integrations to keep everything up-to-date in real time.</p>
-                      </div>
-                      <div class="challenge-item">
-                          <h3>🕒 Saving Time on Repetitive Tasks</h3>
-                          <p>Build custom workflow automations that handle routine tasks instantly.</p>
+                          <div class="challenge-icon">🚀</div>
+                          <h3>Manual Data Entry</h3>
+                          <p>Automated data syncs and real-time integrations eliminate repetitive data entry tasks.</p>
                       </div>
                       <div class="challenge-item">
-                          <h3>⚠️ Eliminating Costly Errors</h3>
-                          <p>Implement error-proof automation workflows ensuring consistency, accuracy, and compliance.</p>
+                          <div class="challenge-icon">⚡</div>
+                          <h3>Process Bottlenecks</h3>
+                          <p>Streamlined workflows and smart automation remove operational bottlenecks.</p>
                       </div>
                       <div class="challenge-item">
-                          <h3>📊 Optimizing Business Operations</h3>
-                          <p>Integrate all your systems for seamless communication, reducing manual workarounds.</p>
-                      </div>
-                      <div class="challenge-item">
-                          <h3>💰 Increasing Profitability</h3>
-                          <p>Process orders faster, enhance customer experiences, and scale effortlessly with intelligent automation.</p>
-                      </div>
-                  </div>
-
-                  <h2>How We Work</h2>
-                  <div class="process-steps">
-                      <div class="process-step">
-                          <h3>Process Discovery & Assessment</h3>
-                          <p>Identifying bottlenecks & inefficiencies</p>
-                      </div>
-                      <div class="process-step">
-                          <h3>Custom Automation Development</h3>
-                          <p>Implementing smart workflows & integrations</p>
-                      </div>
-                      <div class="process-step">
-                          <h3>Testing & Optimization</h3>
-                          <p>Ensuring seamless functionality</p>
-                      </div>
-                      <div class="process-step">
-                          <h3>Ongoing Support & Maintenance</h3>
-                          <p>Continuous improvements for long-term success</p>
+                          <div class="challenge-icon">🔄</div>
+                          <h3>System Integration</h3>
+                          <p>Seamless connection between your essential business tools and platforms.</p>
                       </div>
                   </div>
 
                   <h2>Industries We Serve</h2>
-                  <div class="industry-list">
-                      <span class="industry-tag">Service-Based Businesses</span>
-                      <span class="industry-tag">E-Commerce & Retail</span>
-                      <span class="industry-tag">Healthcare & Wellness</span>
-                      <span class="industry-tag">Finance & Accounting</span>
-                      <span class="industry-tag">Logistics & Transportation</span>
+                  <div class="industry-grid">
+                      <div class="industry-item">
+                          <h4>Service-Based Business</h4>
+                      </div>
+                      <div class="industry-item">
+                          <h4>E-Commerce</h4>
+                      </div>
+                      <div class="industry-item">
+                          <h4>Healthcare</h4>
+                      </div>
+                      <div class="industry-item">
+                          <h4>Finance</h4>
+                      </div>
+                      <div class="industry-item">
+                          <h4>Logistics</h4>
+                      </div>
                   </div>
               </div>
           </section>
